--- a/cursos/desenvolvimento-seguro/desenvolvimento-seguro1/1.sql-injection.md
+++ b/cursos/desenvolvimento-seguro/desenvolvimento-seguro1/1.sql-injection.md
@@ -62,4 +62,4 @@ Ao usar o operador `Sequelize.Op.like`, garante que o `userInput` seja tratado c
 <hr>
 <br>
 
-[< Anterior](inicio.md) | [Próxima >](03-InsecureRandomness.md)
+[< Anterior](inicio.md) | [Próxima >](2.xss.md)
